--- a/aleph.uplugin
+++ b/aleph.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0",
+	"VersionName": "1.0.1",
 	"FriendlyName": "aleph",
 	"Description": "Aleph is a framework that would help you start your new Unreal Engine game project.",
 	"Category": "Framework",
@@ -24,13 +24,11 @@
 	"Plugins": [
 		{
 			"Name": "conSole",
-			"Enabled": true,
-			"Optional": true
+			"Enabled": true
 		},
 		{
 			"Name": "WiMan",
-			"Enabled": true,
-			"Optional": true
+			"Enabled": true
 		},
 		{
 			"Name": "FSR 1.0",
@@ -39,8 +37,7 @@
 		},
 		{
 			"Name": "VitalX",
-			"Enabled": true,
-			"Optional": true
+			"Enabled": true
 		}
 	]
 }
