--- a/aleph.uplugin
+++ b/aleph.uplugin
@@ -2,7 +2,7 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0.3",
-	"FriendlyName": "aleph",
+	"FriendlyName": "aleph-plugin",
 	"Description": "Aleph is a framework that would help you start your new Unreal Engine game project.",
 	"Category": "Framework",
 	"CreatedBy": "whiteex",
