--- a/aleph.uplugin
+++ b/aleph.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0.3",
+	"VersionName": "1.0.4",
 	"FriendlyName": "aleph-plugin",
 	"Description": "Aleph is a framework that would help you start your new Unreal Engine game project.",
 	"Category": "Framework",
@@ -45,6 +45,14 @@
 		},
 		{
 			"Name": "OnlineSubsystem",
+			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemEOS",
+			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
 			"Enabled": true
 		}
 	]
